# logits

./: DATASET_CARD.md  README.md  README_CHAT_TEMPLATE_FIX.md  compute_lengths.py  explore_example.ipynb  explore_logits.py  extract_logits.py  inspect_results.ipynb  logit_comparison.py  pyproject.toml  qwen_chat_template.jinja  visualize_logits.ipynb
docs/: AGENTS.md
