[project]
name = "logit-extraction"
version = "0.1.0"
description = "Extract compressed logits from LLMs for knowledge distillation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.21.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "termcolor>=2.4.0",
]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
all = [
    "logit-extraction[viz,dev]",
]

[project.scripts]
extract-logits = "extract_logits:main"
compute-lengths = "compute_lengths:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
